wip: DBE infinite scrolling (tests failing)
Former-commit-id: da445ba63989cd5424f647d658b5d239ca9d6ecf

--- a/src/angular-app/languageforge/lexicon/views/edit.css
+++ b/src/angular-app/languageforge/lexicon/views/edit.css
@@ -118,7 +118,9 @@ legend.override-bootstrap {
 
 #entryList {
 	/* Override palaso-ui.css */
-	height: auto !important;
+/*	height: auto !important;*/
+	height: 570px;
+	margin-bottom: 20px;
 }
 
 .outer-flex {
