--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -12,7 +12,8 @@
                     <i class="icon-remove" style="color:black; cursor: pointer"></i>
                 </span>
             </div>
-            <div id="entryList">
+            <!-- <div id="entryList" data-pui-when-scrolled="loadMore()"> -->
+            <div id="entryList" data-pui-when-scrolled="loadMore()">
                 <table class="table table-condensed ">
                     <tbody>
                         <tr ng-class="{selected: e.id == currentEntry.id}" class="animate-repeat" ng-repeat="e in entries track by e.id">
