refactor DBE ready to load all but show some

--- a/src/angular-app/languageforge/lexicon/views/edit.css
+++ b/src/angular-app/languageforge/lexicon/views/edit.css
@@ -123,6 +123,10 @@ legend.override-bootstrap {
 	margin-bottom: 20px;
 }
 
+#entryList .table  {
+	margin-bottom: 0px;
+}
+
 .outer-flex {
 	display: flex;
 	flex-direction: row;
