--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -7,13 +7,14 @@
     <div class="row outer-flex" style="margin-top:20px">
         <div class="span4" ng-show="entries.length > 0">
             <div style="margin-bottom:10px">
+	        <span class="pull-right">{{entries.length}} entries</span>
                 <input disabled width="4" placeholder="search filter" type="text" class="input-medium search-query" ng-model="searchText" />
                 <span style="margin-left:10px" title="Clear Filter" ng-click="searchText = ''" ng-show="searchText && searchText != ''">
                     <i class="icon-remove" style="color:black; cursor: pointer"></i>
                 </span>
             </div>
-            <!-- <div id="entryList" data-pui-when-scrolled="loadMore()"> -->
-            <div id="entryList" data-pui-when-scrolled="loadMore()">
+            <!-- <div id="entryList" data-pui-when-scrolled="showMore()"> -->
+            <div id="entryList" data-pui-when-scrolled="showMore()">
                 <table class="table table-condensed ">
                     <tbody>
                         <tr ng-class="{selected: e.id == currentEntry.id}" class="animate-repeat" ng-repeat="e in entries track by e.id">
