bring styles into line with other views

--- a/src/angular-app/languageforge/lexicon/views/configuration.html
+++ b/src/angular-app/languageforge/lexicon/views/configuration.html
@@ -1,5 +1,5 @@
 <div class="container" data-ng-cloak data-ng-controller="ConfigCtrl">
-<h2 style="font-weight:normal">Dictionary Configuration</h2>
+<h2>Dictionary Configuration</h2>
 <form name="configForm">
 <button class="btn btn-primary pull-right" data-ng-disabled="configForm.$pristine" data-ng-click="configurationApply()" ><i class="icon-ok"></i> Apply</button>
 <tabset>
