--- a/src/angular-app/languageforge/lexicon/views/import-export.html
+++ b/src/angular-app/languageforge/lexicon/views/import-export.html
@@ -1,5 +1,5 @@
 <div class="container" data-ng-cloak>
-<h2 style="font-weight:normal">Import/Export</h2>
+<h2>Import/Export</h2>
 <tabset>
 	<tab heading="LIFT Import" data-ng-controller="LiftImportCtrl">
 		<div class="well">
