--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -54,7 +54,7 @@
 						<i class="icon-remove"></i>{{config.entry.fields.lexeme.label}}</button>
 				</div>
 				
-				<tab heading="Edit" active="editTab.active">
+				<tab heading="Edit" active="editTab.active" select="selectEditTab()">
 					<div style="margin-top:20px" class="row">
 						<div class="animate-show" data-ng-show="entryLoaded()" id="entryItemView">
 							<p class="text-error" data-ng-show="lexemeFormRequired">At least one lexeme form is required</p>
@@ -62,24 +62,30 @@
 						</div>
 					</div>
 				</tab>
-				<tab heading="Comment" active="commentsTab.active" disabled="currentEntry.id == ''">
-					<fieldset class="filter-controls override-bootstrap">
-						<legend class="override-bootstrap">Filters <i data-ng-click="toggleFilters()" style="cursor: pointer" data-ng-class="filter.chevronIcon"></i></legend>
-						<div class="filter-controls-inner" data-collapse="!filter.visible">
-							<p><b>These controls are not implemented yet</b></p>
-							<div class="horiz-controls flex-center">
-								<div class="datepicker horiz-flex-element"><input type="checkbox" data-ng-model="useCreatedAfter" />Created after: <input type="text" size="8" data-datepicker-popup data-ng-model="createdAfter"></div>
-								<div class="datepicker horiz-flex-element"><input type="checkbox" data-ng-model="useCreatedBefore" />Created before: <input type="text" size="8" data-datepicker-popup data-ng-model="createdBefore"></div>
-							</div>
-							<div class="created-by">Created by: <select><option>Everyone</option></select></div>
-							<div class="status horiz-controls">Status: <div class="horiz-flex-element" data-ng-repeat="status in filter.validStatuses"><input data-ng-model="filter.searchFor[status]" type="checkbox" />{{status}}</div></div>
-							<div class="containing-text">Containing text: <input type="text" size="50" /></div>
-							<div class="languages-to-show horiz-controls">Languages to show: <div class="horiz-flex-element" data-ng-repeat="lang in getInputSystems()"><input data-ng-model="filter.showLangs[lang.abbreviation]" type="checkbox" />{{lang.languageName}} ({{lang.abbreviation}})</div></div>
-							<button data-ng-click="applyFilters()" class="btn-info top-right-corner"><i class="icon-search"></i></button>
+				<tab heading="Comment" active="commentsTab.active" select="selectCommentsTab()" disabled="currentEntry.id == ''">
+					<div style="margin-top:20px" class="row">
+    					<fieldset class="filter-controls comment-filter">
+    						<legend class="override-bootstrap">Filters <i data-ng-click="toggleFilters()" style="cursor: pointer" data-ng-class="filter.chevronIcon"></i></legend>
+    						<div class="filter-controls-inner" data-collapse="!filter.visible">
+    							<p><b>These controls are not implemented yet</b></p>
+    							<div class="horiz-controls flex-center">
+    								<div class="datepicker horiz-flex-element"><input type="checkbox" data-ng-model="useCreatedAfter" />Created after: <input type="text" size="8" data-datepicker-popup data-ng-model="createdAfter"></div>
+    								<div class="datepicker horiz-flex-element"><input type="checkbox" data-ng-model="useCreatedBefore" />Created before: <input type="text" size="8" data-datepicker-popup data-ng-model="createdBefore"></div>
+    							</div>
+    							<div class="created-by">Created by: <select><option>Everyone</option></select></div>
+    							<div class="status horiz-controls">Status: <div class="horiz-flex-element" data-ng-repeat="status in filter.validStatuses"><input data-ng-model="filter.searchFor[status]" type="checkbox" />{{status}}</div></div>
+    							<div class="containing-text">Containing text: <input type="text" size="50" /></div>
+    							<div class="languages-to-show horiz-controls">Languages to show: <div class="horiz-flex-element" data-ng-repeat="lang in getInputSystems()"><input data-ng-model="filter.showLangs[lang.abbreviation]" type="checkbox" />{{lang.languageName}} ({{lang.abbreviation}})</div></div>
+    							<button data-ng-click="applyFilters()" class="btn-info top-right-corner"><i class="icon-search"></i></button>
+    						</div>
+    					</fieldset>
+					</div>
+					<div style="margin-top:5px" class="row">
+						<div class="animate-show" data-ng-show="entryLoaded()" id="entryItemView">
+							<p class="text-error" data-ng-show="lexemeFormRequired">At least one lexeme form is required</p>
+							<dc-entry config="config" model="currentEntry" control="control"></dc-entry>
 						</div>
-					</fieldset>
-<!-- 					<dc-comments config="config" model="currentEntry"></dc-comments> -->
-					<dc-entry config="config" model="currentEntry"></dc-entry>
+					</div>
 				</tab>
 			</tabset>
 		</div>
