--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -63,7 +63,7 @@
 					</div>
 				</tab>
 				<tab heading="Comment" active="commentsTab.active" select="selectCommentsTab()" disabled="currentEntry.id == ''">
-					<div style="margin-top:20px" class="row">
+					<div class="row">
     					<fieldset class="filter-controls comment-filter">
     						<legend class="override-bootstrap">Filters <i data-ng-click="toggleFilters()" style="cursor: pointer" data-ng-class="filter.chevronIcon"></i></legend>
     						<div class="filter-controls-inner" data-collapse="!filter.visible">
